# advent-of-code

./: README.md  pyproject.toml
2020/day1/: report_repair.html  report_repair.ipynb
2021/day1/: sonar_sweep.ipynb
2021/day2/: README.md  dive.ipynb
2021/day3/: README.md  binary_diagnostic.ipynb
2021/day4/: giant_squid.ipynb
2022/day1/: calorie_counting.ipynb
2022/day2/: rock-paper-scissors.ipynb
2022/day3/: rucksack-reorganization.ipynb
2022/day4/: camp_cleanup.ipynb
challenges/day1/: report_repair.ipynb  report_repair.py  tdd_example.py
challenges/day2/: corrupt_passwords.ipynb
challenges/day3/: slopes.ipynb
