[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <ckcarlosdesign@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.3.4"
pandas = "^1.1.5"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
