[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <ckcarlosdesign@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
numpy = "^1.19.4"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
rich = "^10.15.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
